<?xml version="1.0" encoding="utf-8"?>
<com.portfolio.components.menu xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/menu"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#000"
    android:orientation="vertical"
    android:visibility="invisible"
    android:weightSum="10.0">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="6.5"
        android:orientation="vertical"
        android:background="@drawable/gradient_light_gold" >

        <Button
            android:id="@+id/itemMenu1"
            android:background="@color/dark_blue1"
            android:text="@string/itemMenu2_1"
            style="@style/layout_menu_btn_2" />

        <Button
            android:id="@+id/itemMenu2"
            android:background="@color/dark_blue2"
            android:text="@string/itemMenu2_2"
            style="@style/layout_menu_btn_2"
            />

        <Button
            android:id="@+id/itemMenu3"
            android:background="@color/dark_blue3"
            android:text="@string/itemMenu2_3"
           	style="@style/layout_menu_btn_2"
            
            />

        <Button
            android:id="@+id/itemMenu4"
            android:background="@color/dark_blue4"
            android:text="@string/itemMenu2_4"
            style="@style/layout_menu_btn_2"
            />

        <Button
            android:id="@+id/itemMenu5"
            android:background="@color/dark_blue5"
            android:text="@string/itemMenu2_5"
           	style="@style/layout_menu_btn_2"
           
            />

        <Button
            android:id="@+id/itemMenu6"
            android:background="@color/dark_blue6"
            android:text="@string/itemMenu2_6"
            style="@style/layout_menu_btn_2"
             />
        <Button
            android:id="@+id/itemMenu7"
            android:background="@color/dark_blue8"
            android:text="@string/itemMenu2_7"
            style="@style/layout_menu_btn_2"
             />
    </LinearLayout>

</com.portfolio.components.menu>
