<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="fill_parent"
        android:layout_height="150dp"
        android:contentDescription="@string/desc"
        android:scaleType="fitXY" />

    <TextView
        android:id="@+id/tittle"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:background="@drawable/gradient_gold"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/name_page"
        android:textAllCaps="true"
        android:textColor="#000000"
        android:textSize="20dp" />

    <TextView
        android:id="@+id/text_page_item"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/text_example"
        android:textColor="@color/goldLightEnd"
        android:textColorLink="@color/goldLgt"
        android:textSize="16dp" />

</LinearLayout>