<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    android:orientation="vertical" >

    <TableRow
        android:id="@+id/tableRowList"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="1dp"
        android:layout_weight="1"
        android:background="@drawable/bg_borders" >

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="120sp"
            android:layout_height="fill_parent"
            android:contentDescription="@string/desc"
            android:scaleType="fitXY" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <View
                android:layout_width="fill_parent"
                android:layout_height="4dip"
                android:layout_below="@id/layout_header"
                android:background="@drawable/shadow_header" >
            </View>

            <TextView
                android:id="@+id/tittle_item_list"
                android:layout_width="fill_parent"
                android:layout_height="30dp"
                android:paddingLeft="10dp"
                android:text="@string/tittle_app"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#000000"
                android:textSize="23sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/text_item0_list"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:text="@string/text_example"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#ffffff"
                android:textSize="20sp" />
        </LinearLayout>
    </TableRow>

    <TableRow
        android:id="@+id/tableRowList"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="1dp"
        android:layout_weight="1"
        android:background="@drawable/gradient_light_gold" >

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="120sp"
            android:layout_height="fill_parent"
            android:contentDescription="@string/desc"
            android:scaleType="fitXY" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/tittle_item_list"
                android:layout_width="fill_parent"
                android:layout_height="30dp"
                android:paddingLeft="10dp"
                android:text="@string/tittle_app"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#000000"
                android:textSize="23sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/text_item0_list"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:text="@string/text_example"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#ffffff"
                android:textSize="20sp" />
        </LinearLayout>
    </TableRow>

</LinearLayout>